3. Blog-Post/infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: abhay5349singh/moderation:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-clusterip-srv
spec:
  type: ClusterIP
  selector: # tells service what pods it is going to allow access to
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
